Dynamically setting connection pool size.